tests/ui/traits/const-traits/call-generic-method-fail.stderr
error[E0277]: the trait bound `T: [const] PartialEq` is not satisfied
  --> $DIR/call-generic-method-fail.rs:5:5
   |
LL |     *t == *t
   |     ^^^^^^^^
   |
note: trait `PartialEq` is implemented but not `const`
  --> $SRC_DIR/core/src/ptr/const_ptr.rs:LL:COL
note: trait `PartialEq` is implemented but not `const`
  --> $SRC_DIR/core/src/ptr/mut_ptr.rs:LL:COL

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
